# alpha-bleeding

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
src/: alpha-bleed.cpp  alpha-set.cpp  alpha.h  main.cpp  png.cpp
